stubbed all functionality to allow legacy apps to launch (dundjinni)